--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-select": "^1.0.0-rc.5",
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3"
   },
