--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "griddle-react": "^1.6.0",
     "history": "^4.6.1",
+    "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
@@ -13,6 +14,8 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-select": "^1.0.0-rc.5",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^1.1.0",
+    "redux-persist": "^4.8.0",
     "redux-saga": "^0.15.3"
   },
   "devDependencies": {
