Add REACT_APP_API_URL to env file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID=qKhUAV71zh0Bu2vhxXOew1aDGEzJNhXAXrdlbYe3
 REACT_APP_OAUTH_URL=https://rot-dev.dsd.io/api/v1/o
+REACT_APP_API_URL=https://rot-dev.dsd.io/api/v1
