--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-scripts": "1.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "sh -ac '. .env.local; react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
