--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-select": "^1.0.0-rc.5",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.1.0",
     "redux-persist": "^4.8.0",
