--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "griddle-react": "^1.6.0",
     "history": "^4.6.1",
+    "node-sass-chokidar": "0.0.3",
     "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -18,6 +19,7 @@
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.1.0",
     "redux-persist": "^4.8.0",
+    "redux-query-sync": "^0.1.3",
     "redux-saga": "^0.15.3"
   },
   "devDependencies": {
@@ -29,6 +31,8 @@
     "react-scripts": "1.0.5"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/styles/scss/ -o src/styles/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/scss/ -o src/styles/ --watch --recursive",
     "start": "sh -ac '. .env.local; react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
